# django-view-composer

./: .gitignore  LICENSE  README.md  pyproject.toml
django_view_composer/: apps.py
django_view_composer/templatetags/: view_composer.py
tests/basic/: tests.py  views.py
tests/basic/templates/basic/: context.html
tests/example/: urls.py  views.py
tests/example/templates/example/: basic.html  block.html  index.html  nav.html  test.html
tests/kitchensink/: factories.py  models.py  urls.py  views.py
tests/kitchensink/management/commands/: setup_test_data.py
tests/kitchensink/migrations/: 0001_initial.py
tests/kitchensink/templates/: base.html
tests/kitchensink/templates/kitchensink/: index.html  modal.html  nav.html  person_form.html  person_list.html  person_list_modal.html
tests/kitchensink/templates/kitchensink/basic/: index.html  nav.html
tests/tests/: asgi.py  settings.py  urls.py
