[tool.poetry]
name = "django_view_composer"
version = "0.2.1"
description = "Django template tags to include views inside other views"
authors = ["Josh Higgins <josh@joshh.info>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/joshiggins/django-view-composer"
repository = "https://github.com/joshiggins/django-view-composer"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
factory-boy = "^3.2.1"
jsonpickle = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
